[gd_scene load_steps=3 format=3 uid="uid://dynfiovijsoq"]

[ext_resource type="Script" path="res://ShipBuilderMenu/Parts/part_slot.gd" id="1_1wai5"]
[ext_resource type="Texture2D" uid="uid://bdsg6uvfae2gj" path="res://icon.svg" id="1_ntcvx"]

[node name="PartSlot" type="PanelContainer"]
custom_minimum_size = Vector2(32, 32)
offset_right = 56.0
offset_bottom = 59.0
script = ExtResource("1_1wai5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_ntcvx")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 8
text = "Name"

[node name="CostLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 8
text = "$1,000"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
